# Relativty

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISPLAY.md  LICENSE.es  PULL_REQUEST_TEMPLATE.md  README-ja.md  README.es.md  README.ja.md  README.md  notes.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
3D models/3D models electronics/: screen to mipi.stl
3D models/Hardware 3D models/: 5.5 in lcd.stl  Screen Driver Board.stl  driver board box.stl  lcd to mipi box.stl
3D models/TheYXXY 3D models/: Part_1_Eyepiece.stl  Part_2a.stl  Part_2b.stl  Part_2c_Lens_Mount.stl  Part_2d_Lens_Fastener.stl  Part_3_Connector.stl  Part_3b.stl  Part_4a_Cover.stl  Part_5.stl  Part_6_190mm.stl  Part_8.stl
3D models/Vang1 3D models/: Part010_-_Lens_Adjuster_LEFT.stl  Part011_-_Lens_mount.stl  Part012_-_Lens_Adjuster_button.stl  Part013_-_Lens_Fastner.stl  Part01_-_HDMI_Board_plate.stl  Part02_-_NO_LOGO.stl  Part03_-_Screen_frame.stl  Part04_-_Eye_piece_B.stl  Part05_-_Eye_Piece_A.stl  Part06_-_Hardware_box_ARDUINO_DUE.stl  Part07_-_Connector_A.stl  Part08_-_Connector_B.stl  Part09_-_Lens_Adjuster_RIGHT.stl
3D-Models/: Part_3a.stl  Part_4c_Reinforcement_Plate.stl  Part_6_250mm.stl  Part_7_190mm.stl  Part_7_250mm.stl  Part_9_extension.stl
3D_Models/: box_Arduino_DUE.stl  box_lens_1.STL  box_lens_2.STL  box_mpu6050.STL  box_screen.STL  box_screen_adaptor.STL  box_screen_controller.STL
3D_Models/Source_File/: Relativ_headset_structure.SLDPRT  box_screen_controller.SLDPRT
3D_Models/Source_Files/: Relativ_headset_structure.SLDPRT  box_Arduino_DUE.SLDPRT  box_lens_1.SLDPRT  box_lens_2.SLDPRT  box_mpu6050.SLDPRT  box_screen.SLDPRT  box_screen_adaptor.SLDPRT  box_screen_controller.SLDPRT  box_screen_spherecal.SLDPRT  box_screen_spherical.SLDPRT  support_lens.SLDPRT  ~$Relativ_headset_structure.SLDPRT
Arduino Due/: README.md
Arduino Due/src/main/: main.ino
Relativty_Driver/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Relativty_Driver.sln  Relativty_Driver.vcxproj  Relativty_Driver.vcxproj.filters  build_linux.sh  hidapi.vcxproj  hidapi.vcxproj.filters  openvr_driver.h
Relativty_Driver/DriverLog/: DriverLog.vcxproj  DriverLog.vcxproj.filters
Relativty_Driver/Relativty/: driver.vrdrivermanifest
Relativty_Driver/Relativty/resources/input/: relativty_hmd_profile.json  vrcompositor_bindings_hmd.json
Relativty_Driver/Relativty/resources/rendermodels/generic_hmd/: generic_hmd.mtl
Relativty_Driver/Relativty/resources/settings/: default.vrsettings  default.vrsettings.bak
Relativty_Driver/include/: Relativty_EmbeddedPython.h  Relativty_EmbeddedPython.hpp  Relativty_HMDDriver.hpp  Relativty_ServerDriver.hpp  Relativty_base_device.h  Relativty_base_device.hpp  Relativty_components.h  Relativty_components.hpp  Serial.hpp  driverlog.h  driverlog.hpp  openvr_driver.hpp  stricmp.h  stricmp.hpp
Relativty_Driver/include/OpenVR/: openvr_driver.h
Relativty_Driver/include/Python/: pyconfig.h
Relativty_Driver/include/Python/cpython/: pystate.h
Relativty_Driver/include/hidapi/: hidapi.h
Relativty_Driver/libraries/: hidapi.lib
Relativty_Driver/libraries/Win32/: hidapi.lib  python38.lib
Relativty_Driver/libraries/x64/: hidapi.lib  python38.lib
Relativty_Driver/libsp/: CMakeLists.txt
Relativty_Driver/source/: DriverFactory.cpp  LinuxSerial.cpp  Quaternion.cpp  Quaternion.hpp  Relativty_EmbeddedPython.cpp  Relativty_HMDDriver.cpp  Relativty_HMDDriver.hpp  Relativty_JoyCon.cpp  Relativty_JoyCon.hpp  Relativty_ServerDriver.cpp  Relativty_ServerDriver.hpp  Relativty_base_device.hpp  Relativty_base_device.ipp  Relativty_components.hpp  Serial.hpp  WindowsSerial.cpp  driverlog.cpp  hid.c  stricmp.cpp
Relativty_Driver/x64/Debug/: hidapi.idb  hidapi.vcxproj.FileListAbsolute.txt  vc142.idb
Relativty_Driver/x64/Debug/Relativty_Driver.tlog/: CL.command.1.tlog  CL.write.1.tlog  Relativty_Driver.lastbuildstate
Relativty_Driver/x64/Debug/hidapi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Relativty_Driver/x64/Release/Relativty_Driver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Relativty_Driver.lastbuildstate  Relativty_Driver.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Relativty_Driver/x64/Release/hidapi.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Relativty_Electronics_build/Assembly/: ._motherboard_PnP.csv  jlcpcb.com_motherboard_BOM.csv  motherboard_BOM.xlsx  motherboard_PnP.csv
Relativty_Electronics_build/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_bottom.gbr  solderpaste_top.gbr
Relativty_Electronics_build/GerberFiles/DrillFiles/: drill_1_16.xln
Relativty_Electronics_source/: motherboard.brd  motherboard.sch
Relativty_Firmware/: package_Relativty_board_index.json
Relativty_Firmware/MP9250-HID/MP9250-HID/: MP9250-HID.ino
Relativty_Firmware/MPU9250_HID/: MPU9250_HID.ino
Relativty_Firmware/Relativty_board/: README.md
Relativty_Firmware/firmware/: firmware.ino
Relativty_Mechanical_build/: ._body.stl  ._eyes_panel.stl  ._foam_support.stl  ._front_panel.stl  ._screen_panel.stl  body.stl  eyes_panel.stl  foam_support.stl  front_panel.stl  screen_panel.stl  screws_BOM.xlsx
Relativty_Mechanical_source/: mechanic.f3d
STM32/: README.md
STM32/STM32_BlackPill/: I2Cdev_PillPatch.cpp  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h  MPU6050_9Axis_MotionApps41.h  Relativ.cpp  Relativ.h  STM32.ino.BLUEPILL  STM32_BlackPill.ino
STM32/STM32_BluePill/: I2Cdev.cpp  Relativ.cpp  STM32_BluePill.ino
TheYXXY 3D models/: Part_1_Eyepiece.stl  Part_2c_Lens_Mount.stl  Part_4b_Soft_Mount.stl
Vang1 3D models/: Part013_-_Lens_Fastner.stl  Part02_-_Logo_front_cover.stl  Part04_-_Eye_piece_B.stl  Part06_-_Hardware_box_STM32.stl  Part09_-_Lens_Adjuster_RIGHT.stl
src/main/: main.ino
(+76 files in other folders)
